<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoIP App</string>
    <string name="action_settings">Settings</string>
    <string name="enterName">Enter a display name:</string>
    <string name="submitName">Start</string>
    <string name="call">Call Contact</string>
    <string name="selectContact">Select a contact to call: </string>
    <string name="update">Update Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_make_call">UDPChat</string>
    <string name="calling">"Calling: "</string>
    <string name="mute">Mute Mic</string>
    <string name="endCall">End Call</string>
    <string name="title_activity_receive_call">UDPChat</string>
    <string name="incomingCall">"Incoming call: "</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Đợi tí</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>